--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url     : www.jhwh888.cn # the base hostname & protocol for your site e.g. https
 baseurl : # does not include hostname
 title   : 聚禾招商
 description: > # this means to ignore newlines until "Language & timezone"
-  Your Site Description
+  聚禾文化 聚禾招商 曹公子 起盘策划 商业模式 全案梳理 招商陪跑 落地招商 团队内训 商学院搭建 商学院赋能 美业品牌 招商销讲
 
 
 ## => Language and Timezone
